# ocaml-sentencepiece

./: .clang-format  Makefile  README.md  dune  dune-project  sentencepiece.ml  sentencepiece.mli  sentencepiece.opam
ffi/: discover.ml  dune  sentencepiece_stubs.ml  sentencepiece_types.ml  sentencepiece_wrapper.cc  sentencepiece_wrapper.h
test/: dune  test.ml  trivial.model
